<resources>
<!--    Application level strings-->
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download_button_default">Download</string>
    <string name="download_button_loading">Download in progress…</string>

<!--    Define strings for notification-->
    <string name="notification_title">LoadApp download request </string>
    <string name="notification_button">View download details</string>
    <string name="notification_channel_id">download</string>
    <string name="notification_channel_name">Download complete</string>
    <string name="notification_channel_description">Download completed</string>
    <string name="download_request">downloadFile</string>
    <string name="error_message">error</string>
    <string name="download_status">status</string>
    <string name="id">id</string>

<!--    Define strings for Detail Activity-->
    <string name="ok_button_text">OK</string>
    <string name="file_name_label">File Name:</string>
    <string name="status_label">Status:</string>
    <string name="error_label">Error message:</string>

<!--    Define strings for descriptive text on MainActivity-->
    <string name="glide_description">Glide - Image loading library by bumpTech</string>
    <string name="loadapp_description">LoadApp - Current Repository by Udacity</string>
    <string name="retrofit_description">Retrofit - Type safe HTTP client for Android and Java by Square Inc.</string>
    <string name="download_image_content_description">File download image</string>
    <string name="button_loading">We are loading </string>

<!--    Define strings for the download function-->
    <string name="glide_base_url">https://github.com/bumptech/glideXXX</string>
    <string name="loadapp_base_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="retrofit_base_url">https://github.com/bumptech/glide</string>
    <string name="github_url_end">/archive/refs/heads/master.zip</string>
    <string name="loadapp_filename">nd940c3.zip</string>
    <string name="glide_filename">glide.zip</string>
    <string name="retrofil_filename">retrofit.zip</string>
    <string name="no_option_selected_message">Please select a file to download</string>
    <string name="download_complete">Download completed. Status: %1$S</string>
    <string name="download_success">Success</string>
    <string name="download_failed">Failed</string>
</resources>
